--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -4,10 +4,10 @@ description: |
   Welcome to our new blog, Jason O'Connell. We hope you enjoy 
   reading what we have to say!
 author:
-  - name: Nora Jones 
-    url: https://example.com/norajones
-    affiliation: Spacely Sprockets
-    affiliation_url: https://example.com/spacelysprokets
+  - name: Jason O'Connell 
+    url: https://example.com/Jason O'Connell
+    affiliation: Self
+    affiliation_url: 
 date: 02-01-2022
 output:
   distill::distill_article:
